added bootstrap theme; toying with index page

--- a/source/index.html
+++ b/source/index.html
@@ -18,40 +18,34 @@ footer: true
 	<!-- 960 Container -->
 	<div class="container">
 		
-		<!-- Row Break 
-		<div class="sixteen columns" id="page-header">
-			<br class="clear" />
-			<hr />
+		<div class="eight columns">
+		  <h2>Yo, yo</h2>
 		</div>
-		/End Row Break-->		
 		
-		 
-		<!-- Full Width Slider -->
-		<div class="sixteen columns">
+		<!-- Half Width Slider -->
+		<div class="eight columns">
 			
-			<div class="slider-shadow">
-				<div class="flexslider-container">
-					<div class="flexslider">
-					  <ul class="slides">
-					    <li>
-					     <div class="slide">
-					       <h1>Mmmm… sliders.</h1>
-					     </div>
-					    </li>
-					    <li>
-					      <a href="http://mdnw.net/reactor/skeleton/demo-images/slide5.jpg" data-rel="prettyPhoto[SuperSkeleton]">
-					      	<img src="http://mdnw.net/reactor/skeleton/demo-images/slide5.jpg" alt="SuperSkeleton" />
-					      </a>
-					      <p class="flex-caption">Captions and cupcakes. Winning combination.</p>
-					    </li>
-					    <li>
-					      <a href="http://mdnw.net/reactor/skeleton/demo-images/slide3.jpg" data-rel="prettyPhoto[SuperSkeleton]">
-					        <img src="http://mdnw.net/reactor/skeleton/demo-images/slide3.jpg" alt="SuperSkeleton" />
-					      </a>
-					    </li> 
-					  </ul>
-					</div>
-				</div>			
+			<div class="flexslider-container">
+				<div class="flexslider">
+				  <ul class="slides">
+				    <li>
+				     <div class="slide">
+				       <h1>Mmmm… sliders.</h1>
+				     </div>
+				    </li>
+				    <li>
+				      <a href="/assets/images/slides/slide2.jpg" data-rel="prettyPhoto[SuperSkeleton]">
+				      	<img src="/assets/images/slides/slide2.jpg" alt="Slide 2" />
+				      </a>
+				      <p class="flex-caption">Captions and cupcakes. Winning combination.</p>
+				    </li>
+				    <li>
+				      <a href="/assets/images/slides/slide3.jpg" data-rel="prettyPhoto[SuperSkeleton]">
+				        <img src="/assets/images/slides/slide3.jpg" alt="Slide 3" />
+				      </a>
+				    </li> 
+				  </ul>
+				</div>
 			</div>
 			
 		</div>		
