--- a/public/languages/index.html
+++ b/public/languages/index.html
@@ -9,7 +9,7 @@
   <meta name="author" content="Neo Technology">
 
   
-  <meta name="description" content="Languages and Frameworks Language: All Java .Net Node.js Ruby Python PHP Clojure Scala API: REST Embedded Neo4j REST API Discoverable, language- &hellip;">
+  <meta name="description" content="Languages and Frameworks Language: All Java .Net Node.js Ruby Python PHP Clojure Scala Haskell API: REST Embedded Neo4j REST API Discoverable, &hellip;">
   
 
   <!-- http://t.co/dKP3o1e -->
@@ -197,6 +197,7 @@
   					<a class="button" href="#php">PHP</a>
   					<a class="button" href="#clojure">Clojure</a> 
   					<a class="button" href="#scala">Scala</a> 
+  					<a class="button" href="#haskell">Haskell</a> 
 					</span>
 				  <span class="portfolio-filter-category">API:</span>
 				  <span>
@@ -434,6 +435,22 @@
 							<h5>Neo4j Scala</h5>	
 							<hr class="half-bottom" />
 							<p>A Scala wrapper for Neo4j which introduces an intuitive DSL for graph operations.</p>
+						</div>						
+					</div>				
+				</div>	
+				
+				<div class="four columns module-container haskell rest">				
+					<div class="module">						
+						<div class="module-img">							
+							<a href="http://hackage.haskell.org/package/cypher-0.8">
+								<img src="/assets/images/languages/haskell.png" title="haskell-cypher" alt="image" />
+								<span></span> <!-- replaced with overlay link image -->
+							</a>							
+						</div>
+						<div class="module-meta">
+							<h5>Haskell Cypher</h5>	
+							<hr class="half-bottom" />
+							<p>Haskell Cypher makes it easy to send cypher commands to neo4j servers over their REST API. Additionally, it allows users to parse haskell datatypes from cypher queries..</p>
 						</div>						
 					</div>				
 				</div>	
