corrected datanucleus as embedded, not rest

--- a/source/languages/index.html
+++ b/source/languages/index.html
@@ -295,7 +295,7 @@ footer: true
 					</div>				
 				</div>	
 				
-				<div class="four columns module-container haskell rest">				
+				<div class="four columns module-container java embedded">				
 					<div class="module">						
 						<div class="module-img">							
 							<a href="http://www.datanucleus.org/plugins/store.neo4j.html">
