--- a/public/languages/index.html
+++ b/public/languages/index.html
@@ -450,12 +450,12 @@
 						<div class="module-meta">
 							<h5>Haskell Cypher</h5>	
 							<hr class="half-bottom" />
-							<p>Haskell Cypher makes it easy to send cypher commands to neo4j servers over their REST API. Additionally, it allows users to parse haskell datatypes from cypher queries.</p>
+							<p>Haskell Cypher makes it easy to send cypher commands to neo4j servers over the REST API. Additionally, it allows users to parse haskell datatypes from cypher queries.</p>
 						</div>						
 					</div>				
 				</div>	
 				
-				<div class="four columns module-container haskell rest">				
+				<div class="four columns module-container java embedded">				
 					<div class="module">						
 						<div class="module-img">							
 							<a href="http://www.datanucleus.org/plugins/store.neo4j.html">
@@ -466,7 +466,7 @@
 						<div class="module-meta">
 							<h5>DataNucleus Neo4j Plugin</h5>	
 							<hr class="half-bottom" />
-							<p>datanucleus-neo4j provides persistence of Java objects to the Neo4j graph database. It builds on top of the basic persistence provided by datanucleus-core.</p>
+							<p>datanucleus-neo4j provides persistence of Java objects to Neo4j. It builds on top of the basic persistence provided by datanucleus-core.</p>
 						</div>						
 					</div>				
 				</div>	
