--- a/source/languages/index.html
+++ b/source/languages/index.html
@@ -290,7 +290,7 @@ footer: true
 						<div class="module-meta">
 							<h5>Haskell Cypher</h5>	
 							<hr class="half-bottom" />
-							<p>Haskell Cypher makes it easy to send cypher commands to neo4j servers over their REST API. Additionally, it allows users to parse haskell datatypes from cypher queries.</p>
+							<p>Haskell Cypher makes it easy to send cypher commands to neo4j servers over the REST API. Additionally, it allows users to parse haskell datatypes from cypher queries.</p>
 						</div>						
 					</div>				
 				</div>	
@@ -306,7 +306,7 @@ footer: true
 						<div class="module-meta">
 							<h5>DataNucleus Neo4j Plugin</h5>	
 							<hr class="half-bottom" />
-							<p>datanucleus-neo4j provides persistence of Java objects to the Neo4j graph database. It builds on top of the basic persistence provided by datanucleus-core.</p>
+							<p>datanucleus-neo4j provides persistence of Java objects to Neo4j. It builds on top of the basic persistence provided by datanucleus-core.</p>
 						</div>						
 					</div>				
 				</div>	
