initial hack up of install script, for mac

--- a/source/index.html
+++ b/source/index.html
@@ -34,7 +34,7 @@ footer: true
 				    </li>
 				    <li> <!-- create -->
               <div class="half-slide">
-                 <h1>GraphConnect.</h1>
+                 <h1>GraphConnect is teh awesome.</h1>
                </div>
 				      <a href="{{ root_url }}/assets/images/slides/slide2.jpg">
 				      	<img src="{{ root_url }}/assets/images/slides/slide2.jpg" alt="Slide 2" />
@@ -73,16 +73,7 @@ footer: true
 <div class="super-container full-width" id="section-thirds">
 
 	<!-- 960 Container -->
-	<div class="container">
-
-		<!-- Page Header 
-		<div class="sixteen columns" id="page-header">
-			<h5 class="align-center tk-league-gothic">Make Design, Not War</h5>
-			<h3 class="align-center">Premium WordPress Themes</h3>
-			<hr />
-		</div>
-		/End Page Header -->
-		
+	<div class="container">		
 		
 		<!-- 1/3 Columns -->
 		<div class="one-third column">				
@@ -146,6 +137,7 @@ footer: true
 					  <li>discuss online</li>
 					  <li>write about it</li>
 					  <li>meet in person</li>
+				  </ul>
 				</div>						
 			</div>				
 		</div>
