adding perl driver

--- a/public/languages/index.html
+++ b/public/languages/index.html
@@ -198,6 +198,7 @@
   					<a class="button" href="#clojure">Clojure</a> 
   					<a class="button" href="#scala">Scala</a> 
   					<a class="button" href="#haskell">Haskell</a> 
+  					<a class="button" href="#perl">Perl</a> 
 					</span>
 				  <span class="portfolio-filter-category">API:</span>
 				  <span>
@@ -306,6 +307,22 @@
 							<h5>Neocons</h5>	
 							<hr class="half-bottom" />
 							<p>An idiomatic, feature rich Clojure client which supports (almost) all Neo4J REST API features and is constantly tested against bleeding edge server changes, like the Cypher language improvements. </p>
+						</div>						
+					</div>				
+				</div>	
+
+				<div class="four columns module-container perl rest">				
+					<div class="module">						
+						<div class="module-img">							
+							<a href="http://search.cpan.org/~majensen/REST-Neo4p-0.12/">
+								<img src="/assets/images/languages/perl_logo.png" title="Perl-REST" alt="image" />
+								<span></span> <!-- replaced with overlay link image -->
+							</a>							
+						</div>
+						<div class="module-meta">
+							<h5>Perl REST</h5>	
+							<hr class="half-bottom" />
+							<p>Perl object bindings for a Neo4j database  by Mark Allen Jensen.</p>
 						</div>						
 					</div>				
 				</div>	
